--- a/estudologia/Gemfile
+++ b/estudologia/Gemfile
@@ -35,9 +35,17 @@ gem 'jbuilder', '~> 2.5'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+group :production do
+  gem 'rails_12factor'
+end
+
 group :development, :test do
-  # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
+  gem 'rspec-rails'
+  gem 'rails-controller-testing'
+  gem 'rubocop', '~> 0.49.0', require: false
+  gem 'factory_girl_rails'
+  gem 'simplecov', :require => false
 end
 
 group :development do
