--- a/estudologia/Gemfile
+++ b/estudologia/Gemfile
@@ -22,6 +22,7 @@ gem 'coffee-rails', '~> 4.2'
 # gem 'therubyracer', platforms: :ruby
 
 gem 'actionpack-action_caching'
+gem 'rack-cors'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
